seaqt/QtCore/gen_qmetatype.nim


proc fcQMetaType_registerNormalizedTypedef(normalizedTypeName: struct_seaqt_string, typeVal: pointer): void {.importc: "QMetaType_registerNormalizedTypedef".}
proc fcQMetaType_typeChar(typeName: cstring): cint {.importc: "QMetaType_type_char".}
proc fcQMetaType_type_QByteArray(typeName: struct_seaqt_string): cint {.importc: "QMetaType_type_QByteArray".}
proc fcQMetaType_typeName(typeVal: cint): cstring {.importc: "QMetaType_typeName".}
proc fcQMetaType_sizeOfType(typeVal: cint): cint {.importc: "QMetaType_sizeOf_type".}
proc fcQMetaType_typeFlags(typeVal: cint): cint {.importc: "QMetaType_typeFlags".}
proc fcQMetaType_metaObjectForType(typeVal: cint): pointer {.importc: "QMetaType_metaObjectForType".}
proc fcQMetaType_createType(typeVal: cint): pointer {.importc: "QMetaType_create_type".}
proc fcQMetaType_destroyTypeData(typeVal: cint, data: pointer): void {.importc: "QMetaType_destroy_type_data".}
proc fcQMetaType_constructTypeWhereCopy(typeVal: cint, where: pointer, copy: pointer): pointer {.importc: "QMetaType_construct_type_where_copy".}
proc fcQMetaType_destructTypeWhere(typeVal: cint, where: pointer): void {.importc: "QMetaType_destruct_type_where".}
proc fcQMetaType_isRegisteredType(typeVal: cint): bool {.importc: "QMetaType_isRegistered_type".}
proc fcQMetaType_isValid(self: pointer): bool {.importc: "QMetaType_isValid".}
proc fcQMetaType_isRegistered(self: pointer): bool {.importc: "QMetaType_isRegistered".}
proc fcQMetaType_registerType(self: pointer): void {.importc: "QMetaType_registerType".}
proc fcQMetaType_id(self: pointer): cint {.importc: "QMetaType_id".}
proc fcQMetaType_sizeOf(self: pointer): int64 {.importc: "QMetaType_sizeOf".}
proc fcQMetaType_alignOf(self: pointer): int64 {.importc: "QMetaType_alignOf".}
proc fcQMetaType_flags(self: pointer): cint {.importc: "QMetaType_flags".}
proc fcQMetaType_metaObject(self: pointer): pointer {.importc: "QMetaType_metaObject".}
proc fcQMetaType_name(self: pointer): cstring {.importc: "QMetaType_name".}
proc fcQMetaType_createX(self: pointer): pointer {.importc: "QMetaType_create".}
proc fcQMetaType_destroyData(self: pointer, data: pointer): void {.importc: "QMetaType_destroy_data".}
proc fcQMetaType_constructWhere(self: pointer, where: pointer): pointer {.importc: "QMetaType_construct_where".}
proc fcQMetaType_destructData(self: pointer, data: pointer): void {.importc: "QMetaType_destruct_data".}
proc fcQMetaType_compareLhsRhs(self: pointer, lhs: pointer, rhs: pointer): pointer {.importc: "QMetaType_compare_lhs_rhs".}
proc fcQMetaType_equalsLhsRhs(self: pointer, lhs: pointer, rhs: pointer): bool {.importc: "QMetaType_equals_lhs_rhs".}
proc fcQMetaType_isDefaultConstructible(self: pointer): bool {.importc: "QMetaType_isDefaultConstructible".}
proc fcQMetaType_isCopyConstructible(self: pointer): bool {.importc: "QMetaType_isCopyConstructible".}
proc fcQMetaType_isMoveConstructible(self: pointer): bool {.importc: "QMetaType_isMoveConstructible".}
proc fcQMetaType_isDestructible(self: pointer): bool {.importc: "QMetaType_isDestructible".}
proc fcQMetaType_isEqualityComparable(self: pointer): bool {.importc: "QMetaType_isEqualityComparable".}
proc fcQMetaType_isOrdered(self: pointer): bool {.importc: "QMetaType_isOrdered".}
proc fcQMetaType_saveStreamData(self: pointer, stream: pointer, data: pointer): bool {.importc: "QMetaType_save_stream_data".}
proc fcQMetaType_loadStreamData(self: pointer, stream: pointer, data: pointer): bool {.importc: "QMetaType_load_stream_data".}
proc fcQMetaType_hasRegisteredDataStreamOperators(self: pointer): bool {.importc: "QMetaType_hasRegisteredDataStreamOperators".}
proc fcQMetaType_saveStreamTypeData(stream: pointer, typeVal: cint, data: pointer): bool {.importc: "QMetaType_save_stream_type_data".}
proc fcQMetaType_loadStreamTypeData(stream: pointer, typeVal: cint, data: pointer): bool {.importc: "QMetaType_load_stream_type_data".}
proc fcQMetaType_fromName(name: struct_seaqt_string): pointer {.importc: "QMetaType_fromName".}
proc fcQMetaType_debugStreamDbgRhs(self: pointer, dbg: pointer, rhs: pointer): bool {.importc: "QMetaType_debugStream_dbg_rhs".}
proc fcQMetaType_hasRegisteredDebugStreamOperator(self: pointer): bool {.importc: "QMetaType_hasRegisteredDebugStreamOperator".}
proc fcQMetaType_debugStreamDbgRhsTypeId(dbg: pointer, rhs: pointer, typeId: cint): bool {.importc: "QMetaType_debugStream_dbg_rhs_typeId".}
proc fcQMetaType_hasRegisteredDebugStreamOperatorTypeId(typeId: cint): bool {.importc: "QMetaType_hasRegisteredDebugStreamOperator_typeId".}
proc fcQMetaType_convertFromTypeFromToTypeTo(fromType: pointer, fromVal: pointer, toType: pointer, to: pointer): bool {.importc: "QMetaType_convert_fromType_from_toType_to".}
proc fcQMetaType_canConvert(fromType: pointer, toType: pointer): bool {.importc: "QMetaType_canConvert".}
proc fcQMetaType_view(fromType: pointer, fromVal: pointer, toType: pointer, to: pointer): bool {.importc: "QMetaType_view".}
proc fcQMetaType_canView(fromType: pointer, toType: pointer): bool {.importc: "QMetaType_canView".}
proc fcQMetaType_convertFromFromTypeIdToToTypeId(fromVal: pointer, fromTypeId: cint, to: pointer, toTypeId: cint): bool {.importc: "QMetaType_convert_from_fromTypeId_to_toTypeId".}
proc fcQMetaType_compareLhsRhsTypeIdResult(lhs: pointer, rhs: pointer, typeId: cint, resultVal: ptr cint): bool {.importc: "QMetaType_compare_lhs_rhs_typeId_result".}
proc fcQMetaType_equalsLhsRhsTypeIdResult(lhs: pointer, rhs: pointer, typeId: cint, resultVal: ptr cint): bool {.importc: "QMetaType_equals_lhs_rhs_typeId_result".}
proc fcQMetaType_hasRegisteredConverterFunction(fromType: pointer, toType: pointer): bool {.importc: "QMetaType_hasRegisteredConverterFunction".}
proc fcQMetaType_hasRegisteredMutableViewFunction(fromType: pointer, toType: pointer): bool {.importc: "QMetaType_hasRegisteredMutableViewFunction".}
proc fcQMetaType_unregisterConverterFunction(fromVal: pointer, to: pointer): void {.importc: "QMetaType_unregisterConverterFunction".}
proc fcQMetaType_unregisterMutableViewFunction(fromVal: pointer, to: pointer): void {.importc: "QMetaType_unregisterMutableViewFunction".}
proc fcQMetaType_unregisterMetaType(typeVal: pointer): void {.importc: "QMetaType_unregisterMetaType".}
proc fcQMetaType_iface(self: pointer): pointer {.importc: "QMetaType_iface".}
proc fcQMetaType_ifaceConst(self: pointer): pointer {.importc: "QMetaType_iface_const".}
proc fcQMetaType_createTypeCopy(typeVal: cint, copy: pointer): pointer {.importc: "QMetaType_create_type_copy".}
proc fcQMetaType_idInt(self: pointer, param1: cint): cint {.importc: "QMetaType_id_int".}
proc fcQMetaType_createCopy(self: pointer, copy: pointer): pointer {.importc: "QMetaType_create_copy".}
proc fcQMetaType_constructWhereCopy(self: pointer, where: pointer, copy: pointer): pointer {.importc: "QMetaType_construct_where_copy".}
proc fcQMetaType_new(typeVal: cint): ptr cQMetaType {.importc: "QMetaType_new_type".}
proc fcQMetaType_new2(d: pointer): ptr cQMetaType {.importc: "QMetaType_new_d".}
proc fcQMetaType_new3(): ptr cQMetaType {.importc: "QMetaType_new".}
proc fcQMetaType_new4(fromVal: pointer): ptr cQMetaType {.importc: "QMetaType_new_from".}

proc registerNormalizedTypedef*(_: type gen_qmetatype_types.QMetaType, normalizedTypeName: openArray[byte], typeVal: gen_qmetatype_types.QMetaType): void =
  fcQMetaType_registerNormalizedTypedef(struct_seaqt_string(data: if len(normalizedTypeName) > 0: addr normalizedTypeName[0] else: nil, len: csize_t(len(normalizedTypeName))), typeVal.h)

proc typeX*(_: type gen_qmetatype_types.QMetaType, typeName: cstring): cint =
  fcQMetaType_typeChar(typeName)

proc typeX*(_: type gen_qmetatype_types.QMetaType, typeName: openArray[byte]): cint =
  fcQMetaType_type_QByteArray(struct_seaqt_string(data: if len(typeName) > 0: addr typeName[0] else: nil, len: csize_t(len(typeName))))

proc typeName*(_: type gen_qmetatype_types.QMetaType, typeVal: cint): cstring =
  (fcQMetaType_typeName(typeVal))

proc sizeOf*(_: type gen_qmetatype_types.QMetaType, typeVal: cint): cint =
  fcQMetaType_sizeOfType(typeVal)

proc typeFlags*(_: type gen_qmetatype_types.QMetaType, typeVal: cint): cint =
  cint(fcQMetaType_typeFlags(typeVal))

proc metaObjectForType*(_: type gen_qmetatype_types.QMetaType, typeVal: cint): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQMetaType_metaObjectForType(typeVal), owned: false)

proc createX*(_: type gen_qmetatype_types.QMetaType, typeVal: cint): pointer =
  fcQMetaType_createType(typeVal)

proc destroy*(_: type gen_qmetatype_types.QMetaType, typeVal: cint, data: pointer): void =
  fcQMetaType_destroyTypeData(typeVal, data)

proc construct*(_: type gen_qmetatype_types.QMetaType, typeVal: cint, where: pointer, copy: pointer): pointer =
  fcQMetaType_constructTypeWhereCopy(typeVal, where, copy)

proc destruct*(_: type gen_qmetatype_types.QMetaType, typeVal: cint, where: pointer): void =
  fcQMetaType_destructTypeWhere(typeVal, where)

proc isRegistered*(_: type gen_qmetatype_types.QMetaType, typeVal: cint): bool =
  fcQMetaType_isRegisteredType(typeVal)

proc isValid*(self: gen_qmetatype_types.QMetaType): bool =
  fcQMetaType_isValid(self.h)

proc isRegistered*(self: gen_qmetatype_types.QMetaType): bool =
  fcQMetaType_isRegistered(self.h)

proc registerType*(self: gen_qmetatype_types.QMetaType): void =
  fcQMetaType_registerType(self.h)

proc id*(self: gen_qmetatype_types.QMetaType): cint =
  fcQMetaType_id(self.h)

proc sizeOf*(self: gen_qmetatype_types.QMetaType): int64 =
  fcQMetaType_sizeOf(self.h)

proc alignOf*(self: gen_qmetatype_types.QMetaType): int64 =
  fcQMetaType_alignOf(self.h)

proc flags*(self: gen_qmetatype_types.QMetaType): cint =
  cint(fcQMetaType_flags(self.h))

proc metaObject*(self: gen_qmetatype_types.QMetaType): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQMetaType_metaObject(self.h), owned: false)

proc name*(self: gen_qmetatype_types.QMetaType): cstring =
  (fcQMetaType_name(self.h))

proc createX*(self: gen_qmetatype_types.QMetaType): pointer =
  fcQMetaType_createX(self.h)

proc destroy*(self: gen_qmetatype_types.QMetaType, data: pointer): void =
  fcQMetaType_destroyData(self.h, data)

proc construct*(self: gen_qmetatype_types.QMetaType, where: pointer): pointer =
  fcQMetaType_constructWhere(self.h, where)

proc destruct*(self: gen_qmetatype_types.QMetaType, data: pointer): void =
  fcQMetaType_destructData(self.h, data)

proc compare*(self: gen_qmetatype_types.QMetaType, lhs: pointer, rhs: pointer): gen_qcompare_types.QPartialOrdering =
  gen_qcompare_types.QPartialOrdering(h: fcQMetaType_compareLhsRhs(self.h, lhs, rhs), owned: true)

proc equals*(self: gen_qmetatype_types.QMetaType, lhs: pointer, rhs: pointer): bool =
  fcQMetaType_equalsLhsRhs(self.h, lhs, rhs)

proc isDefaultConstructible*(self: gen_qmetatype_types.QMetaType): bool =
  fcQMetaType_isDefaultConstructible(self.h)

proc isCopyConstructible*(self: gen_qmetatype_types.QMetaType): bool =
  fcQMetaType_isCopyConstructible(self.h)

proc isMoveConstructible*(self: gen_qmetatype_types.QMetaType): bool =
  fcQMetaType_isMoveConstructible(self.h)

proc isDestructible*(self: gen_qmetatype_types.QMetaType): bool =
  fcQMetaType_isDestructible(self.h)

proc isEqualityComparable*(self: gen_qmetatype_types.QMetaType): bool =
  fcQMetaType_isEqualityComparable(self.h)

proc isOrdered*(self: gen_qmetatype_types.QMetaType): bool =
  fcQMetaType_isOrdered(self.h)

proc save*(self: gen_qmetatype_types.QMetaType, stream: gen_qdatastream_types.QDataStream, data: pointer): bool =
  fcQMetaType_saveStreamData(self.h, stream.h, data)

proc load*(self: gen_qmetatype_types.QMetaType, stream: gen_qdatastream_types.QDataStream, data: pointer): bool =
  fcQMetaType_loadStreamData(self.h, stream.h, data)

proc hasRegisteredDataStreamOperators*(self: gen_qmetatype_types.QMetaType): bool =
  fcQMetaType_hasRegisteredDataStreamOperators(self.h)
